--- a/DockerProject/Views/Shared/_Layout.cshtml
+++ b/DockerProject/Views/Shared/_Layout.cshtml
@@ -28,8 +28,14 @@
                         </li>
                         @if (User.IsInRole("Admin"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Index">Administrare</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Administrare
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Admins" asp-action="Index">Utilizatori</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Admins" asp-action="Notifications">Notificări</a></li>
+                                </ul>
                             </li>
                         }
                     </ul>
