--- a/DockerProject/Views/Restaurants/Edit.cshtml
+++ b/DockerProject/Views/Restaurants/Edit.cshtml
@@ -28,11 +28,20 @@
                     <input class="form-check-input" asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                 </label>
             </div>
-            <div class="form-group">
-                <label asp-for="OwnerId" class="control-label"></label>
-                <select asp-for="OwnerId" class="form-control" asp-items="ViewBag.OwnerId"></select>
-                <span asp-validation-for="OwnerId" class="text-danger"></span>
-            </div>
+            @if (User.IsInRole("Admin"))
+            {
+                <div class="form-group">
+                    <label asp-for="OwnerId" class="control-label">Assign Owner (Admin Only)</label>
+                    <select asp-for="OwnerId" class="form-control" asp-items="ViewBag.OwnerList">
+                        <option value="">-- Select Owner --</option>
+                    </select>
+                    <span asp-validation-for="OwnerId" class="text-danger"></span>
+                </div>
+            }
+            else
+            {
+                <input type="hidden" asp-for="OwnerId" />
+            }
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
